--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@angular/router": "^8.2.0",
     "@nestjs/common": "^6.2.4",
     "@nestjs/core": "^6.2.4",
+    "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.2.4",
     "@nrwl/schematics": "^8.5.0",
     "core-js": "^2.5.4",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.4.0",
@@ -64,6 +66,7 @@
     "@nrwl/workspace": "8.5.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "@types/passport-jwt": "^3.0.2",
     "@types/passport-local": "^1.0.33",
     "codelyzer": "~5.0.1",
     "cypress": "3.4.1",
