--- a/package.json
+++ b/package.json
@@ -43,13 +43,18 @@
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.2.4",
+    "@nestjs/typeorm": "^6.1.3",
     "@nrwl/schematics": "^8.5.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.0",
     "core-js": "^2.5.4",
+    "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.4.0",
+    "typeorm": "^0.2.19",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
