--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.2.4",
+    "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
     "@nrwl/schematics": "^8.5.0",
     "class-transformer": "^0.2.3",
@@ -80,6 +81,7 @@
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
     "prettier": "1.16.4",
+    "swagger-ui-express": "^4.1.0",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
