--- a/nx.json
+++ b/nx.json
@@ -65,10 +65,10 @@
     "data": {
       "tags": ["shared-module"]
     },
-    "layout-toolbar": {
+    "nav-toolbar": {
       "tags": ["shared-module"]
     },
-    "layout-sidenav": {
+    "nav-sidenav": {
       "tags": ["shared-module"]
     },
     "auth-lazy-manager": {
@@ -76,6 +76,12 @@
     },
     "common-forms-address-form": {
       "tags": ["shared-module"]
+    },
+    "nav-navigator": {
+      "tags": ["private-module"]
+    },
+    "common-core": {
+      "tags": ["core-module"]
     }
   }
 }
