--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "^8.2.0",
     "@angular/material": "^8.2.0",
+    "@angular/material-moment-adapter": "^8.2.1",
     "@angular/platform-browser": "^8.2.0",
     "@angular/platform-browser-dynamic": "^8.2.0",
     "@angular/router": "^8.2.0",
