--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
     "@nestjsx/crud": "^4.2.0",
+    "@nestjsx/crud-request": "^4.2.0",
     "@nestjsx/crud-typeorm": "^4.2.0",
     "@ngxs/store": "^3.5.1",
     "@nrwl/schematics": "^8.5.0",
