--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@nrwl/nest": "8.5.0",
     "@nrwl/node": "8.5.0",
     "@nrwl/workspace": "8.5.0",
+    "@types/es6-shim": "^0.31.39",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "@types/passport-jwt": "^3.0.2",
