--- a/nx.json
+++ b/nx.json
@@ -121,6 +121,12 @@
     },
     "account-shared-auth": {
       "tags": ["account:auth"]
+    },
+    "school-lazy-instructors": {
+      "tags": ["school:lazy"]
+    },
+    "school-shared-resources": {
+      "tags": []
     }
   }
 }
