--- a/tsconfig.json
+++ b/tsconfig.json
@@ -97,7 +97,13 @@
       "backend/auth": ["libs/account/backend/auth/src"],
       "backend/auth/*": ["libs/account/backend/auth/src/*"],
       "@suite/account/lazy/auth": ["libs/account/lazy/auth/src/index.ts"],
-      "@suite/account/shared/auth": ["libs/account/shared/auth/src/index.ts"]
+      "@suite/account/shared/auth": ["libs/account/shared/auth/src/index.ts"],
+      "@suite/school/lazy/instructors": [
+        "libs/school/lazy/instructors/src/index.ts"
+      ],
+      "@suite/school/shared/resources": [
+        "libs/school/shared/resources/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
